# ct-recon

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeUserPresets.json  Dockerfile  README.md  conanfile.py  conanfile.txt  config.ini  run.sh
.github/workflows/: CI-schedule.yml  CI.yml  CINigh  cmake-multi-platform.yml
include/: BUILD  testInc.h
source/: BUILD  CMakeLists.txt  main.cpp  testSrc.cpp
src-ct-recon/: main.cpp  testInc.h  testSrc.cpp
test/: CMakeLists.txt  main.cpp
